<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#f2f3f4" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_centerHorizontal="true"
    <RelativeLayout android:id="@+id/card_content" android:background="#00222222" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:id="@+id/title_location" android:paddingBottom="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/address" />
        <LinearLayout android:orientation="horizontal" android:id="@+id/location" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/title_location" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/pressure" />
            <TextView android:textStyle="italic" android:ellipsize="end" android:id="@+id/presure" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/temprature" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/location" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/temp" />
            <TextView android:textStyle="italic" android:ellipsize="end" android:id="@+id/temp" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/humidi" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/temprature" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/humid" />
            <TextView android:textStyle="italic" android:ellipsize="end" android:id="@+id/humid" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" android:singleLine="true" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="2dp" android:paddingBottom="2dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/humidi" android:layout_alignParentLeft="true" android:layout_alignParentRight="true">
            <TextView android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/desc" />
            <TextView android:textStyle="italic" android:ellipsize="end" android:id="@+id/desc" android:paddingLeft="4dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" android:singleLine="true" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
